# src/main/java/org/eclipse/jakarta/purchaseorder/model/SalesInvoiceItem.java
@@ -1,0 +1,17 @@
+package org.eclipse.jakarta.purchaseorder.model;
+
+import java.io.Serializable;
+import java.math.BigDecimal;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class SalesInvoiceItem implements Serializable {
+
+    private Long id;
+    private Product product;
+    private Integer quantity;
+    private BigDecimal unitPrice;
+}
